app localization performance tweaks public toilets POI

--- a/Gentse Feesten 2013/nl.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/nl.lproj/Localizable.strings
@@ -27,9 +27,35 @@
 "MAANDAG_22_JULI" = "Maandag 22 juli";
 "DINSDAG_23_JULI" = "Dinsdag 23 juli";
 "WOENSDAG_24_JULI" = "Woensdag 24 juli";
-"DONDERDAG_25_JULI" = "Dondag 25 juli";
+"DONDERDAG_25_JULI" = "Donderdag 25 juli";
 "VRIJDAG_26_JULI" = "Vrijdag 26 juli";
 "ZATERDAG_27_JULI" = "Zaterdag 27 juli";
 "ZONDAG_28_JULI" = "Zondag 28 juli";
 "MAANDAG_29_JULI" = "Maandag 29 juli";
+"HOME" = "Home";
+"MY_FAVORITES" = "Mijn favorieten";
+"PROGRAM" = "Programma";
+"CATEGORIES" = "Categorieën";
+"FREE" = "Gratis";
+"FESTIVALS" = "Festivals";
+"PRACTICAL" = "Praktisch";
+"PUBLIC_TOILETS" = "Publiek sanitair";
+"POLICE" = "Politie";
+"FIRST_AID" = "EHBO";
+"PARKINGS" = "Parkings";
+"SETTINGS" = "Instellingen";
+"ABOUT" = "Over deze app";
+"ALL_DAY" = "Dag";
+"UPDATE_PROGRAM" = "Programma bijwerken";
+"IMPORTING" = "Importeren...";
+"DONE" = "Klaar!";
+"NO_EVENTS_YET" = "U heeft nog geen evenementen,\nwilt u het programma downloaden?\n\nU kan via instellingen het volledige programma steeds bijwerken.";
+"OK" = "Ok";
+"CANCEL" = "Annuleer";
+"DOWNLOAD" = "Download";
+"FETCHING" = "Downloaden...";
+"YOUR_LOCATION" = "Uw locatie";
+"WARNING" = "Opgelet!";
+"NOT_LOCATED_IN_GHENT" = "U bevind zich momenteel niet in het centrum van Gent.";
+"SPOTLIGHT" = "In de kijker";
 
