added string to l10n

--- a/Gentse Feesten 2013/nl.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/nl.lproj/Localizable.strings
@@ -58,4 +58,6 @@
 "WARNING" = "Opgelet!";
 "NOT_LOCATED_IN_GHENT" = "U bevind zich momenteel niet in het centrum van Gent.";
 "SPOTLIGHT" = "In de kijker";
+"INTERESTS" = "Interesses";
+
 
