--- a/Gentse Feesten 2013/nl.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/nl.lproj/Localizable.strings
@@ -62,5 +62,10 @@
 "LOADING_PARKINGS" = "Parkings aan het laden.";
 "TYPE" = "Type:";
 "PRICE" = "Prijs:";
+"OPEN" = "Open:";
+"DATE" = "Datum:";
+"PRICE" = "Prijs:";
+"EVENT_LOCATION" = "Locatie:";
+"MORE_INFO_ONLINE" = "Meer info online";
 
 "ABOUT_BODY_TEXT" = "Open source mobiele applicatie voor de Gentse Feesten 2013. Wij zijn niet verantwoordelijk voor de correctheid van de aangeboden informatie. \n \nCredits: @TimLeytens freelance iOS & Drupal developer, @Swentel Android & Drupal developer bij Wunderkraut en @LeenVS webdesigner bij Wunderkraut. \n \nBroncode: \niOS: http://github.com/TimLeytens/GF13 \nAndroid: http://github.com/swentel/GF13";
