added EN translation

--- a/Gentse Feesten 2013/en.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/en.lproj/Localizable.strings
@@ -6,66 +6,64 @@
  Copyright (c) 2013 Tim Leytens. All rights reserved.
  */
 
-"BALS_DANS" = "Bals / Dans";
+"BALS_DANS" = "Balls / Dances";
 "CIRCUS" = "Circus";
 "COMEDY" = "Comedy";
-"CONCERTEN_DIVERS" = "Concerten > divers";
-"CONCERTEN_JAZZ" = "Concerten > jazz";
-"CONCERTEN_KLASSIEK" = "Concerten > klassiek";
-"CONCERTEN_ROCK" = "Concerten > rock-pop-techno-blues-folk-world music";
-"KINDERPROGRAMMAS" = "Kinder- en jeugdprogramma's";
-"MARKTEN" = "Markten";
-"SPEL" = "Spel, sport en recreatie";
-"TENTOONSTELLINGEN" = "Tentoonstellingen en geleide bezoeken";
+"CONCERTEN_DIVERS" = "Concerts > various";
+"CONCERTEN_JAZZ" = "Concerts > jazz";
+"CONCERTEN_KLASSIEK" = "Concerts > classic";
+"CONCERTEN_ROCK" = "Concerts > rock-pop-techno-blues-folk-world music";
+"KINDERPROGRAMMAS" = "Children and youth programs";
+"MARKTEN" = "Markets";
+"SPEL" = "Games, sport and recreation";
+"TENTOONSTELLINGEN" = "Exhibitions and guided tours";
 "THEATER" = "Theater";
-"VARIA" = "Varia";
-"VERTELLINGEN" = "Vertellingen/lezingen/poëzie";
-"VUURWERK" = "Vuurwerk";
-"WANDELINGEN" = "Wandelingen";
-"ZATERDAG_20_JULI" = "Zaterdag 20 juli";
-"ZONDAG_21_JULI" = "Zondag 21 juli";
-"MAANDAG_22_JULI" = "Maandag 22 juli";
-"DINSDAG_23_JULI" = "Dinsdag 23 juli";
-"WOENSDAG_24_JULI" = "Woensdag 24 juli";
-"DONDERDAG_25_JULI" = "Donderdag 25 juli";
-"VRIJDAG_26_JULI" = "Vrijdag 26 juli";
-"ZATERDAG_27_JULI" = "Zaterdag 27 juli";
-"ZONDAG_28_JULI" = "Zondag 28 juli";
-"MAANDAG_29_JULI" = "Maandag 29 juli";
+"VARIA" = "Miscellaneous";
+"VERTELLINGEN" = "Stories/readings/poetry";
+"VUURWERK" = "Firework";
+"WANDELINGEN" = "Walks";
+"ZATERDAG_20_JULI" = "Saturday, July 20";
+"ZONDAG_21_JULI" = "Sunday, July 21";
+"MAANDAG_22_JULI" = "Monday, July 22";
+"DINSDAG_23_JULI" = "Tuesday, July 23";
+"WOENSDAG_24_JULI" = "Wednesday, July 24";
+"DONDERDAG_25_JULI" = "Thursday, July 25";
+"VRIJDAG_26_JULI" = "Friday, July 26";
+"ZATERDAG_27_JULI" = "Saturday, July 27";
+"ZONDAG_28_JULI" = "Sunday, July 28";
+"MAANDAG_29_JULI" = "Monday, July 29";
 "HOME" = "Home";
-"MY_FAVORITES" = "Mijn favorieten";
-"PROGRAM" = "Programma";
-"CATEGORIES" = "Categorieën";
-"FREE" = "Gratis";
+"MY_FAVORITES" = "My favorites";
+"PROGRAM" = "Program";
+"CATEGORIES" = "Categories";
+"FREE" = "Free";
 "FESTIVALS" = "Festivals";
-"PRACTICAL" = "Praktisch";
-"PUBLIC_TOILETS" = "Publiek sanitair";
-"POLICE" = "Politie";
-"FIRST_AID" = "EHBO";
-"PARKINGS" = "Parkings";
-"SETTINGS" = "Instellingen";
-"ABOUT" = "Over deze app";
-"ALL_DAY" = "Dag";
-"UPDATE_PROGRAM" = "Programma bijwerken";
-"IMPORTING" = "Importeren...";
-"DONE" = "Klaar!";
+"PRACTICAL" = "Pratical";
+"PUBLIC_TOILETS" = "Public toilets";
+"PARKINGS" = "Parking";
+"SETTINGS" = "Settings";
+"ABOUT" = "About this app";
+"ALL_DAY" = "All day";
+"UPDATE_PROGRAM" = "Update program";
+"IMPORTING" = "Importing...";
+"DONE" = "Done!";
 "OK" = "Ok";
-"CANCEL" = "Annuleer";
+"CANCEL" = "Cancel";
 "DOWNLOAD" = "Download";
-"FETCHING" = "Downloaden...";
-"YOUR_LOCATION" = "Uw locatie";
-"WARNING" = "Opgelet!";
-"NOT_LOCATED_IN_GHENT" = "U bevind zich momenteel niet in het centrum van Gent.";
-"SPOTLIGHT" = "In de kijker";
-"INTERESTS" = "Interesses";
-"NO_FAVORITES_YET" = "U heeft nog geen favorieten.";
-"LOADING_PARKINGS" = "Parkings aan het laden.";
+"FETCHING" = "Downloading...";
+"YOUR_LOCATION" = "Your location";
+"WARNING" = "Warning!";
+"NOT_LOCATED_IN_GHENT" = "You are currently not located in the center of Ghent.";
+"SPOTLIGHT" = "Spotlight";
+"INTERESTS" = "Interests";
+"NO_FAVORITES_YET" = "No favorites yet.";
+"LOADING_PARKINGS" = "Loading parkings.";
 "TYPE" = "Type:";
-"PRICE" = "Prijs:";
+"PRICE" = "Price:";
 "OPEN" = "Open:";
-"DATE" = "Datum:";
-"PRICE" = "Prijs:";
-"EVENT_LOCATION" = "Locatie:";
-"MORE_INFO_ONLINE" = "Meer info online";
+"DATE" = "Date:";
+"EVENT_LOCATION" = "Location:";
+"MORE_INFO_ONLINE" = "More info online";
+"SHOW_ROUTE" = "Show route";
 
-"ABOUT_BODY_TEXT" = "Open source mobiele applicatie voor de Gentse Feesten 2013. Wij zijn niet verantwoordelijk voor de correctheid van de aangeboden informatie. \n \nCredits: @TimLeytens freelance iOS & Drupal developer, @Swentel Android & Drupal developer bij Wunderkraut en @LeenVS webdesigner bij Wunderkraut. \n \nBroncode: \niOS: http://github.com/TimLeytens/Gentse-Feesten-2013 \nAndroid: http://github.com/swentel/gentsefeesten";
+"ABOUT_BODY_TEXT" = "Open source mobile app for the Gentse Feesten 2013. We are not responsible for the correctness of the provided information. \n \nCredits: @TimLeytens freelance iOS & Drupal developer, @Swentel Android & Drupal developer at Wunderkraut and @LeenVS graphic designer at Wunderkraut. \n \Source code: \niOS: http://github.com/TimLeytens/Gentse-Feesten-2013 \nAndroid: http://github.com/swentel/gentsefeesten";
