--- a/Gentse Feesten 2013/fr.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/fr.lproj/Localizable.strings
@@ -24,6 +24,16 @@
 "ZATERDAG_27_JULI" = "Samedi 27 juillet";
 "ZONDAG_28_JULI" = "Dimanche 28 juillet";
 "MAANDAG_29_JULI" = "Lundi 29 juillet";
+"ZA_20_JULI" = "Sam 20/7";
+"ZO_21_JULI" = "Dim 21/7";
+"MA_22_JULI" = "Lu 22/7";
+"DI_23_JULI" = "Ma 23/7";
+"WOE_24_JULI" = "Me 24/7";
+"DO_25_JULI" = "Jeu 25/7";
+"VR_26_JULI" = "Vend 26/7";
+"ZA_27_JULI" = "Sam 27/7";
+"ZO_28_JULI" = "Sun 28/7";
+"MA_29_JULI" = "Dim 29/7";
 "HOME" = "Page d'accueil";
 "MY_FAVORITES" = "Mes favoris";
 "PROGRAM" = "Programme";
@@ -61,5 +71,8 @@
 "MORE_INFO_ONLINE" = "Plus d'infos en ligne";
 "SHOW_ROUTE" = "Afficher l'itinéraire";
 "NO_INTERNET" = "Pas de connection à internet";
-
+"ALL_CATEGORIES" = "Toutes les catégories";
+"OTHER_LOCATIONS" = "Autres lieux";
+"ALL_LOCATIONS" = "Tous les lieux";
+"LOCATION" = "Lieu";
 "ABOUT_BODY_TEXT" = "Open source mobiele applicatie voor de Gentse Feesten 2013. Wij zijn niet verantwoordelijk voor de correctheid van de aangeboden informatie.  \n \nCredits: @TimLeytens freelance iOS & Drupal developer, @Swentel Android & Drupal developer bij Wunderkraut en @LeenVS webdesigner bij Wunderkraut. \n \nBroncode: \niOS: http://github.com/TimLeytens/Gentse-Feesten-2013 \nAndroid: http://github.com/swentel/gentsefeesten";
