--- a/Gentse Feesten 2013/nl.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/nl.lproj/Localizable.strings
@@ -72,6 +72,8 @@
 "SHOW_ROUTE" = "Toon route";
 "NO_INTERNET" = "Kan geen verbinding maken met het internet.";
 "ALL_CATEGORIES" = "Alle categorieën";
-
+"OTHER_LOCATIONS" = "Overige locaties";
+"ALL_LOCATIONS" = "Alle locaties";
+"LOCATION" = "Locatie";
 
 "ABOUT_BODY_TEXT" = "Open source mobiele applicatie voor de Gentse Feesten 2013. Wij zijn niet verantwoordelijk voor de correctheid van de aangeboden informatie. \n \nCredits: @TimLeytens freelance iOS & Drupal developer, @Swentel Android & Drupal developer bij Wunderkraut en @LeenVS webdesigner bij Wunderkraut. \n \nBroncode: \niOS: http://github.com/TimLeytens/Gentse-Feesten-2013 \nAndroid: http://github.com/swentel/gentsefeesten";
