prevent crash when clicking on no result cell

--- a/Gentse Feesten 2013/es.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/es.lproj/Localizable.strings
@@ -72,5 +72,7 @@
 "OTHER_LOCATIONS" = "Otros ubicaciones";
 "ALL_LOCATIONS" = "Todas las ubicaciones";
 "LOCATION" = "Ubicación";
+"NO_RESULT" = "Sin resultados";
+
 
 "ABOUT_BODY_TEXT" = "Open source mobile app for the Gentse Feesten 2013. We are not responsible for the correctness of the provided information. \n \nCredits: @TimLeytens freelance iOS & Drupal developer, @Swentel Android & Drupal developer at Wunderkraut and @LeenVS graphic designer at Wunderkraut. \n \Source code: \niOS: http://github.com/TimLeytens/Gentse-Feesten-2013 \nAndroid: http://github.com/swentel/gentsefeesten";
