--- a/Gentse Feesten 2013/en.lproj/Localizable.strings
+++ b/Gentse Feesten 2013/en.lproj/Localizable.strings
@@ -72,5 +72,6 @@
 "OTHER_LOCATIONS" = "Other locations";
 "ALL_LOCATIONS" = "All locations";
 "LOCATION" = "Location";
+"NO_RESULT" = "No results";
 
 "ABOUT_BODY_TEXT" = "Open source mobile app for the Gentse Feesten 2013. We are not responsible for the correctness of the provided information. \n \nCredits: @TimLeytens freelance iOS & Drupal developer, @Swentel Android & Drupal developer at Wunderkraut and @LeenVS graphic designer at Wunderkraut. \n \Source code: \niOS: http://github.com/TimLeytens/Gentse-Feesten-2013 \nAndroid: http://github.com/swentel/gentsefeesten";
